manifests/node-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${namespace}
  name: node
  labels:
    app: node
spec:
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: NodePort
