manifests/node-ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  namespace: ${namespace}
  annotations: 
    cert-manager.io/cluster-issuer: "syndeno-issuer"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "node.plt.ko.syndeno.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node
            port:
              number: 8888
  tls:
  - hosts: ["node.plt.ko.syndeno.net"]
    secretName: "node.plt.ko.syndeno.net"
